discussion/kv_engine/185542/185542_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-54975: Merge branch 'cheshire-cat' into 7.1.4

* commit 'ae558e219':
  MB-54975: Update Ephemeral replica memory stats on DEL_VBUCKET

Change-Id: Ibfd4c6b48893f757f6f018c80b31291fa08b9c01

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2023-01-31 18:50:01.000000000
Message: 
Uploaded patch set 3: New merge patch set was added with a new first parent relative to Patch Set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2023-01-31 18:50:21.000000000
Message: 
Patch Set 3: Well-Formed+1

Permission granted to commit: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/335310/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-01-31 18:57:58.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-windows-714/62/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-714/62/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-714/33/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-714/33/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/7.1.4/37/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/7.1.4/37/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-714/33/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-714/kv_engine/engines/ep/tests/module_tests/ephemeral_bucket_test.cc:255:37: error: reference to type "const CookieIface" could not bind to an lvalue of type "CookieIface *" [clang-diagnostic-error]
              engine->deleteVBucket(cookie, vbid, false));
                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-714/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/gtest.h:2044:69: note: expanded from macro "EXPECT_EQ"
  EXPECT_PRED_FORMAT2(::testing::internal::EqHelper::Compare, val1, val2)
                                                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-714/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/gtest_pred_impl.h:164:40: note: expanded from macro "EXPECT_PRED_FORMAT2"
  GTEST_PRED_FORMAT2_(pred_format, v1, v2, GTEST_NONFATAL_FAILURE_)
                                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-714/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/gtest_pred_impl.h:149:43: note: expanded from macro "GTEST_PRED_FORMAT2_"
  GTEST_ASSERT_(pred_format(#v1, #v2, v1, v2), \
                                          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-714/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/gtest_pred_impl.h:77:52: note: expanded from macro "GTEST_ASSERT_"
  if (const ::testing::AssertionResult gtest_ar = (expression)) \
                                                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-714/kv_engine/engines/ep/src/ep_engine.h:899:54: note: passing argument to parameter "cookie" here
    cb::engine_errc deleteVBucket(const CookieIface& cookie,
                                                     ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-714/33/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-714/kv_engine/engines/ep/tests/module_tests/ephemeral_bucket_test.cc:255:37:
error: reference to type "const CookieIface" could not bind to an lvalue of type "CookieIface *" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-714/33/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/7.1.4/75/ : FAILURE

Compile error at [2023-01-31T18:55:17.748Z] ../kv_engine/engines/ep/tests/module_tests/ephemeral_bucket_test.cc:255:37:
error: reference to type "const CookieIface" could not bind to an lvalue of type "CookieIface *"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/7.1.4/75/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/7.1.4/54/ : FAILURE

Compile error at [2023-01-31T18:52:33.361Z] ../kv_engine/engines/ep/tests/module_tests/ephemeral_bucket_test.cc:255:37:
error: reference to type "const CookieIface" could not bind to an lvalue of type "CookieIface *"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/7.1.4/54/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/7.1.4/34/ : FAILURE

Compile error at [2023-01-31T18:56:37.304Z] ../kv_engine/engines/ep/tests/module_tests/ephemeral_bucket_test.cc:255:37:
error: reference to type "const CookieIface" could not bind to an lvalue of type "CookieIface *"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/7.1.4/34/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/7.1.4/37/ : FAILURE

Compile error at [2023-01-31T18:55:55.751Z] ../kv_engine/engines/ep/tests/module_tests/ephemeral_bucket_test.cc:255:37:
error: cannot convert ?CookieIface*? to ?const CookieIface&?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/7.1.4/37/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/7.1.4/37/ : FAILURE

Compile error at [2023-01-31T18:55:08.101Z] ../kv_engine/engines/ep/tests/module_tests/ephemeral_bucket_test.cc:255:37:
error: reference to type "const CookieIface" could not bind to an lvalue of type "CookieIface *"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/7.1.4/37/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/7.1.4/34/ : FAILURE

Compile error at [2023-01-31T18:55:12.419Z] ../kv_engine/engines/ep/tests/module_tests/ephemeral_bucket_test.cc:255:37:
error: cannot convert ?CookieIface*? to ?const CookieIface&?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/7.1.4/34/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22472/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
